[gd_scene load_steps=8 format=3 uid="uid://dsiesba77e41y"]

[ext_resource type="Script" uid="uid://crjw5k33bbyd7" path="res://Player/player.gd" id="1_4flbx"]
[ext_resource type="PackedScene" uid="uid://bwpmbvt3os8oh" path="res://Guns/pistol.tscn" id="2_onrkg"]
[ext_resource type="AudioStream" uid="uid://bxpk87d0257wj" path="res://Player/footsteps-stairs-fast-90220.mp3" id="3_btcbx"]
[ext_resource type="AudioStream" uid="uid://bkcvj37io8aqk" path="res://Player/086819_hurt-2-82784.mp3" id="4_gwnis"]
[ext_resource type="AudioStream" uid="uid://ceysvqpgpd2g5" path="res://Enemies/bullet-382829.mp3" id="5_k53q1"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sh265"]
radius = 0.4

[sub_resource type="CapsuleMesh" id="CapsuleMesh_sh265"]
radius = 0.4

[node name="Player" type="CharacterBody3D"]
process_mode = 1
collision_mask = 7
script = ExtResource("1_4flbx")

[node name="PlayerCamera" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)

[node name="Pistol" parent="PlayerCamera" instance=ExtResource("2_onrkg")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_sh265")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_sh265")

[node name="WalkingAudioStream" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_btcbx")

[node name="HitAudio" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
stream = ExtResource("4_gwnis")
volume_db = 20.0
max_db = 6.0

[node name="BulletMissAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_k53q1")
volume_db = -10.0
